--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset = "UTF-8">
 <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+<meta name="description" content="موقع يهتم بالنباتات الطبيعية وفوائدها الصحية.">
+<meta name="keywords" content="نباتات, طبيعة, صحة, أعشاب, الزراعة">
+<meta name="author" content="Ahmed Fekry">
 <title>موقع الطبيعة والنّبات</title>
 <link rel = "stylesheet" href = "mainCssFile.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
