--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="موقع يهتم بالنباتات الطبيعية وفوائدها الصحية.">
 <meta name="keywords" content="نباتات, طبيعة, صحة, أعشاب, الزراعة">
 <meta name="author" content="Ahmed Fekry">
+<meta name="google-site-verification" content="kC0L6ESnafqnGC10xGaXFZQ81XzXogTgHFP3j3d9ofE" />
 <title>موقع الطبيعة والنّبات</title>
 <link rel = "stylesheet" href = "mainCssFile.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
