--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <meta name="description" content="موقع يهتم بالنباتات الطبيعية وفوائدها الصحية.">
 <meta name="keywords" content="نباتات, طبيعة, صحة, أعشاب, الزراعة">
 <meta name="author" content="Ahmed Fekry">
+<meta property="og:title" content="موقع النباتات الطبيعية">
+<meta property="og:description" content="استكشف فوائد النباتات والأعشاب الطبيعية وتأثيرها الصحي.">
+<meta property="og:image" content="https://nature-and-plants.github.io/images/preview.jpg">
+<meta property="og:url" content="https://nature-and-plants.github.io">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="موقع النباتات الطبيعية">
+<meta name="twitter:description" content="استكشف فوائد النباتات والأعشاب الطبيعية وتأثيرها الصحي.">
+<meta name="twitter:image" content="https://nature-and-plants.github.io/images/preview.jpg">
 <meta name="google-site-verification" content="kC0L6ESnafqnGC10xGaXFZQ81XzXogTgHFP3j3d9ofE" />
 <title>موقع الطبيعة والنّبات</title>
 <link rel = "stylesheet" href = "mainCssFile.css">
