--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <a href="index.html" class = "back">&longleftarrow;</a>
   <div class="container">
     <h1>اتصل بنا</h1>
     <p>نرحب بتواصلك معنا لأي استفسارات أو اقتراحات.</p>
