--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <a href="index.html" class = "back">&longleftarrow;</a>
   <div class="container">
     <h1>من نحن</h1>
     <p>
