--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <li><a href = "index.html" style = "color: darkkhaki;">الرئيسية</a></li>
 <li><a href = "plants.html">النباتات</a></li>
 <li><a href = "nature.html">الطبيعة</a></li>
-<button class = "dark" onclick = "darkMood('container')">🌑</button>
-<button class = "light" onclick = "lightMood('container')">🌕</button>
+<button class = "dark" onclick = "darkMood('container')">dark</button>
+<button class = "light" onclick = "lightMood('container')">light</button>
 <li>
 <div class = "open-menu" onclick = "showOpenMenu()">
 <p></p>
