--- a/nature.html
+++ b/nature.html
@@ -15,8 +15,8 @@
 <li><a href = "index.html">الرئيسية</a></li>
 <li><a href = "plants.html">النباتات</a></li>
 <li><a href = "nature.html" style = "color: darkkhaki;">الطبيعة</a></li>
-<button class = "dark" onclick = "darkMood('natureBox')">🌑</button>
-<button class = "light" onclick = "lightMood('natureBox')">🌕</button>
+<button class = "dark" onclick = "darkMood('natureBox')">dark</button>
+<button class = "light" onclick = "lightMood('natureBox')">light</button>
 <li>
 <div class = "open-menu" onclick = "showOpenMenu()">
 <p></p>
