--- a/plants.html
+++ b/plants.html
@@ -15,8 +15,8 @@
 <li><a href = "index.html">الرئيسية</a></li>
 <li><a href = "plants.html" style = "color: darkkhaki;">النباتات</a></li>
 <li><a href = "nature.html">الطبيعة</a></li>
-<button class = "dark" onclick = "darkMood('plantsBox')">🌑</button>
-<button class = "light" onclick = "lightMood('plantsBox')">🌕</button>
+<button class = "dark" onclick = "darkMood('plantsBox')">dark</button>
+<button class = "light" onclick = "lightMood('plantsBox')">light</button>
 <li>
 <div class = "open-menu" onclick = showOpenMenu()>
 <p></p>
