--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 <a href = "سمك.html">الأسماك</a>
 </div>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <h1>
 أشهر الحدائق النباتية في العالم
 <small>:</small>
@@ -700,6 +712,18 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 </div>
 </div>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <script src = "mainJsFile.js"></script>
 </body>
 </html>
