--- a/plants.html
+++ b/plants.html
@@ -186,6 +186,18 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 <img src = "ليمون.jpg">
 <a href = "ليمون.html"> 🍋 نبات الليمون</a>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <h2 id = "two">الفاكهة</h2>
 <h2 class = "colored">الفاكهة</h2>
 <div class = "plants-boxes">
@@ -456,6 +468,18 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 </div>
 </div>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <h2 id = "five">الأعشاب</h2>
 <h2 class = "colored">الأعشاب</h2>
 <div class = "plants-boxes">
