--- a/nature.html
+++ b/nature.html
@@ -1007,6 +1007,18 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 </div>
 </div>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <h1>أهم المواضيع المتعلقة بالبيئة:</h1>
 <div class = "d-flex">
 <div class = "d-flex2">
@@ -2024,6 +2036,19 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 </div>
 </div>
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<h1>مصادر الطاقة المتجددة</h1>
 <div class = "d-flex">
 <div class = "d-flex2">
 <div class = "content">
@@ -2438,11 +2463,6 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 </div>
 </div>
 </div>
-<h1>
-بعض الصور عن الطبيعة
-<small>:</small>
-</h1>
-<a href = "nature_images.html" class = "main-links">صور الطبيعة الخلابة  🌳🌲🌺</a>
 </div>
 <script src = "mainJsFile.js"></script>
 </body>
