--- a/articles.html
+++ b/articles.html
@@ -3769,6 +3769,18 @@ strong {
 عرض المزيد
 <strong>&downarrow;</strong>
 </button>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <h2><span>ثانيا:</span>أغرب الظواهر الطبيعية</h2>
 <div id = "natural-show">
 <div class="main-cont">
@@ -11347,6 +11359,18 @@ strong {
 عرض المزيد
 <strong>&downarrow;</strong>
 </button>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <script>
 let image = document.getElementById("image")
 let textContent = document.getElementById("textContent")
