--- a/daily_information.html
+++ b/daily_information.html
@@ -111,6 +111,18 @@ footer {
     <button>لا</button>
     </div>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <footer>شكرا على تقييمك 😁</footer>
     <script>
         let content = document.getElementById("content");
