--- a/about.html
+++ b/about.html
@@ -17,5 +17,17 @@
       نسعى لتوفير محتوى مميز باللغة العربية يساعدك على فهم فوائد الطبيعة والعودة إلى الأساليب الطبيعية في تحسين الصحة والحياة.
     </p>
   </div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
+     crossorigin="anonymous"></script>
+<!-- Ad-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8806598824650227"
+     data-ad-slot="2356878014"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
