--- a/nature.html
+++ b/nature.html
@@ -32,8 +32,8 @@
 <a href = "nature_images.html" class = "par">معرض الصور</a>
 <a href = "articles.html" class = "par">صفحة المقالات</a>
 <a href = "privacy.html" class = "par">سياسة الخصوصية</a>
+<a href = "about.html" class = "par">من نحن</a>
 <a href = "contact.html" class = "par">اتصل بنا</a>
-<a href = "about.html" class = "par">امن نحن</a>
 <div id = "circles">
 <p class = "par-circle" id = "boxOne"
 onclick = "change ('boxOne', 'darkred', 'white', 'darkkhaki', '#531', 'white', 'yellow', 'aqua')"></p>
