--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Cairo:wght@200..1000&family=Lateef:wght@200;300;400;500;600;700;800&family=Noto+Sans+Imperial+Aramaic&family=Vazirmatn:wght@100..900&display=swap" rel="stylesheet">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8827228296769855"
+  crossorigin="anonymous"></script>
 </head>
 <body>
 <header>
@@ -106,13 +108,11 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 <a href = "سمك.html">الأسماك</a>
 </div>
 </div>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
-     crossorigin="anonymous"></script>
-<!-- Ad-footer -->
+<!-- ad-footer -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-8806598824650227"
-     data-ad-slot="2356878014"
+     data-ad-client="ca-pub-8827228296769855"
+     data-ad-slot="2181935427"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
@@ -712,13 +712,10 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 </div>
 </div>
 </div>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
-     crossorigin="anonymous"></script>
-<!-- Ad-footer -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-8806598824650227"
-     data-ad-slot="2356878014"
+     data-ad-client="ca-pub-8827228296769855"
+     data-ad-slot="2181935427"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
