--- a/nature.html
+++ b/nature.html
@@ -1007,13 +1007,10 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 </div>
 </div>
 </div>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
-     crossorigin="anonymous"></script>
-<!-- Ad-footer -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-8806598824650227"
-     data-ad-slot="2356878014"
+     data-ad-client="ca-pub-8827228296769855"
+     data-ad-slot="2181935427"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
@@ -2036,13 +2033,10 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 </div>
 </div>
 </div>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8806598824650227"
-     crossorigin="anonymous"></script>
-<!-- Ad-footer -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-8806598824650227"
-     data-ad-slot="2356878014"
+     data-ad-client="ca-pub-8827228296769855"
+     data-ad-slot="2181935427"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
@@ -2464,6 +2458,15 @@ onclick = "change ('boxFour', 'gold', 'black', 'brown', 'darkkhaki', 'white', 'b
 </div>
 </div>
 </div>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8827228296769855"
+     data-ad-slot="2181935427"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <script src = "mainJsFile.js"></script>
 </body>
 </html>
