--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Cairo:wght@200..1000&family=Lateef:wght@200;300;400;500;600;700;800&family=Noto+Sans+Imperial+Aramaic&family=Vazirmatn:wght@100..900&display=swap" rel="stylesheet">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8827228296769855"
   crossorigin="anonymous"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QM85XX0JKB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QM85XX0JKB');
+</script>
 </head>
 <body>
 <header>
